--- a/pages/about.html
+++ b/pages/about.html
@@ -1,14 +1,5 @@
-<html>
+<h1>Miguel's Wildthings Refuge</h1>
 
-<head></head>
-
-<body>
-  <H1>Welcome!</H1>
-  <blockquote>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae corporis aspernatur
-    neque tempora illum repudiandae eum nesciunt cum qui cumque fugiat, laboriosam officiis,
-    dolor sequi blanditiis, enim provident animi accusantium?
-  </blockquote>
-</body>
-
-</html>
+<blockquote>
+When we contemplate the whole globe...
+</blockquote>
